<resources>
    <string name="app_name">300Tutor</string>
    <string name="main_menu_home_title">Главная</string>
    <string name="main_menu_profile_title">Аккаунт</string>
    <string name="main_menu_test_solution_title">Решения тестов</string>
    <string name="register_button">Register</string>
    <string name="register_text">Регистрация</string>
    <string name="email_text">E-mail</string>
    <string name="email_required_text">E-mail*</string>
    <string name="code">Код</string>
    <string name="phone_number">Номер телефона</string>
    <string name="code_plus_7">+7</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="phone_text">Phone</string>
    <string name="password_text">Password</string>
    <string name="password_required_text">Password*</string>
    <string name="patronymic_text">Patronymic</string>
    <string name="authorization_text">Авторизация</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="sign_in">Войти</string>
    <string name="phone_example">9123456789</string>
    <string name="register_success_message">Регистрация прошла успешно</string>
    <string name="password_wrong">Пароль должен содержать не менее 6 символов, включая минимум 1 цифру</string>
    <string name="email_wrong">Используйте корректный адрес электронной почты</string>
    <string name="phone_wrong">Введите номер телефона</string>
    <!--ru strings-->
    <string name="password_text_ru">Пароль</string>
    <string name="name_text_ru">Имя</string>
    <string name="surname_text_ru">Фамилия</string>
    <string name="phone_text_ru">Телефон</string>
    <string name="phone_required_text_ru">Телефон*</string>
    <string name="patronymic_text_ru">Отчество</string>
    <string name="register_button_ru">Регистрация</string>
    <string name="password_required_text_ru">Пароль*</string>
    <string name="open_telegram_title">Телеграм бот</string>
    <string name="checkbox_student_title">Зарегистрироваться как студент</string>

    <!--    errors-->
    <string name="unknown_error_message">Произошла неизвестная ошибка. Повторите попытку позже</string>
    <string name="wrong_data_error_message">Ошибка! Проверьте введеные данные</string>
    <string name="server_error_message">Неизвестная ошибка на сервере. Повторите попытку позже</string>
    <string name="unathorized_error_message">Произошла ошибка авторизации</string>
    <string name="logout">Выйти</string>
    <string name="profile_person_info">Информация</string>
    <string name="profile_error_account">Ошибка загрузки данных</string>
    <string name="solution_image">solutionImage</string>
    <string name="answer_with_errors_helper_text">Введите правильный ответ</string>
    <string name="answer_verify_text">Проверить</string>
    <string name="answer_send_text">Отправить</string>
    <string name="video_action">Открыть</string>
    <string name="video_title">К вопросу прикреплено видео.</string>

    //Solution
    <string name="your_answer">Ваш ответ:</string>
    <string name="correct_answer_without_errors">Правильный ответ (без ошибок):</string>
    <string name="explanation_answer">Пояснения к ответу на вопрос</string>
    <string name="incorrect_answer">Неправильный ответ</string>
    <string name="correct_answer">Правильный ответ</string>
    <string name="correct_answers">Правильные ответы:</string>
    <string name="allmost_the_right_answer">Почти правильный ответ</string>
    <string name="estimate_text">Оценить</string>
    <string name="your_detailed_answer">Ваш развернутый ответ</string>
    <string name="detailed_answer_received">Получено:</string>
    <string name="detailed_answer_total">Всего:</string>
    <string name="points_answer">Баллы за ответ:</string>
    <string name="question_has_been_rated">Установлена оценка для вопроса</string>
    <string name="answer_needs_to_be_checked">Ответ необходимо оценить</string>
    <string name="attention">Внимание</string>
    <string name="ok">ОК</string>
    <string name="accepted">Понятно</string>
    <string name="cancel">Отмена</string>
    <string name="open_youtube_message">Открыть youtube для просмотра видео?</string>
    <string name="open_telegram">Открыть Telegram?</string>
    <string name="go_to_test_solution">Перейти к решению теста</string>
    <string name="start_solution_test">Начать решение теста </string>
    <string name="subject">Предметы</string>
    <string name="solution">Решение</string>
    <string name="start">Начать</string>
    <string name="press_again">Нажмите ещё раз для выхода</string>
    <string name="confirm_logout">Подтвердите выход</string>
    <string name="confirm_action">Подтвердите действие</string>
    <string name="warning_logout">Вы действительно хотите выйти?</string>
    <string name="complited_solution">Завершенные</string>
    <string name="not_complited_solution">Не завершенные</string>
    <string name="all">Все</string>
    <string name="go">Перейти</string>
    <string name="received_points_out_of">Получено %1$s баллов из %2$s.</string>
    <string name="received_points_out_of_result">Вы получили %1$s баллов из %2$s.</string>
    <string name="you_answered_out_of_questions_correctly">Вы правильно ответили на %1$s из %2$s вопросов.</string>
    <string name="pie_chat_title_point">%1$s из %2$s</string>
    <string name="test_solved">Тест решён на %1$s.</string>
    <string name="of_issues_resolved">Решено %1$s вопросов</string>
    <string name="start_date">Дата начала: %1$s</string>
    <string name="end_date">Дата завершения: %1$s</string>
    <string name="finish_test">Завершить тест</string>
    <string name="points_question">Баллы: %1$s из %2$s.</string>
    <string name="points">Баллы</string>
    <string name="finish">Завершить</string>
    <string name="finish_test_dialog">Завершение теста</string>
    <string name="finish_test_message">Если завершите тест не сможете вернуться к решению</string>
    <string name="come_back_later">Вернуться позже</string>
    <string name="your_not_answer">[Вы не указали ответ]</string>
    <string name="result_test_need_to_check_questions">Не проверен %1$s вопрос. Его необходимо проверить самому или с помощью куратора.</string>
    <string name="open_site">Перейти на сайт?</string>
    <string name="open_link">Перейти по ссылке?\n "%1$s"</string>
    <string name="site">Сайт</string>
    <string name="start_test_message">Началось решение теста</string>
    <string name="result">Результат решения</string>
    <string name="course_access_key">Ключ доступа к курсу</string>
    <string name="my_course">Мои курсы</string>
    <string name="choose_course">Подобрать курс</string>
    <string name="oops">Упс...</string>
    <string name="dont_havecourses">У вас сейчас нет курсов. Давайте подберём подходящий</string>
    <string name="activate_key_message">Вы добавлены в группу "%1$s"</string>
</resources>
