<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/defaultWhite60"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_6"
        android:layout_marginVertical="@dimen/margin_4"
        android:background="@drawable/rectangle_12_content_background"
        android:paddingVertical="@dimen/margin_8">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/bubble_gum_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_6"
            android:background="@drawable/rectangle_12_background"
            android:orientation="vertical"
            android:padding="@dimen/space_12"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oops"
                android:textColor="?attr/custom_text"
                android:textSize="@dimen/text_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTitleTextView" />

            <TextView
                android:id="@+id/surnameTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_havecourses"
                android:textColor="?attr/textPrimary"
                android:textSize="@dimen/text_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTitleTextView" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/chooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/margin_6"
            android:layout_marginTop="@dimen/margin_8"
            android:backgroundTint="?attr/primary"
            android:text="@string/choose_course"
            android:textSize="@dimen/text_16"
            app:cornerRadius="@dimen/radius_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
