<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/authorization_text"
        android:textColor="?attr/textPrimary"
        android:textSize="@dimen/text_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_144"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_text_ru"
            android:textColor="?attr/textPrimary"
            app:boxBackgroundColor="?attr/defaultTransparent"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColor="?attr/textPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_24"
            android:fontFamily="@font/roboto"
            android:hint="@string/password_text_ru"
            android:textColor="?attr/textPrimary"
            app:boxBackgroundColor="?attr/defaultTransparent"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="?attr/textPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_32"
            android:backgroundTint="?attr/defaultBlue"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            app:cornerRadius="@dimen/radius_8"
            app:layout_constraintEnd_toEndOf="@id/passwordTextInput"
            app:layout_constraintStart_toStartOf="@+id/passwordTextInput"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInput"
            app:layout_constraintWidth_percent="0.8" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:backgroundTint="?attr/defaultGreen"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/register_text"
        android:textAllCaps="true"
        android:textSize="@dimen/text_16"
        app:cornerRadius="@dimen/radius_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
