<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/authorizationToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIconTint="?attr/secondary"
            app:title="@string/authorization_text"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TitleToolbarTextAppearance"
            app:titleTextColor="?attr/secondary" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/size_256"
            android:layout_height="@dimen/size_128"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorizationToolbar"
            app:srcCompat="@drawable/ic_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tutorImage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_10"
            android:src="@drawable/tutor_back"
            app:layout_constraintBottom_toTopOf="@+id/registrationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authContainerLl" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/authContainerLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imagePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:paddingEnd="@dimen/space_2"
                    android:src="@drawable/icon_flag"
                    app:layout_constraintBottom_toBottomOf="@id/phoneOne"
                    app:layout_constraintEnd_toStartOf="@+id/phoneOne"
                    app:layout_constraintTop_toTopOf="@id/phoneOne" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_58"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/code"
                    android:textColorHint="?attr/secondary"
                    android:textSize="@dimen/text_12"
                    app:hintTextAppearance="@style/EditTextHintTextAppearance"
                    app:hintTextColor="?attr/primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconTint="@color/default_transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneOneEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/roboto"
                        android:imeOptions="actionDone"
                        android:inputType="none"
                        android:text="@string/code_plus_7"
                        android:textColor="?attr/textPrimary"
                        android:theme="@style/EditTextCursorColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_56"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/phone_number"
                    android:textColorHint="?attr/secondary"
                    android:textSize="@dimen/text_12"
                    app:hintTextAppearance="@style/EditTextHintTextAppearance"
                    app:hintTextColor="?attr/primary"
                    app:layout_constraintEnd_toStartOf="@+id/imageContainer"
                    app:layout_constraintStart_toStartOf="@+id/phoneOne"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconTint="@color/default_transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneInputEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:fontFamily="@font/roboto"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:lines="1"
                        android:textColor="?attr/textPrimary"
                        android:textColorHint="?attr/secondary"
                        android:theme="@style/EditTextCursorColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/email_text"
                    android:textColorHint="?attr/secondary"
                    android:textSize="@dimen/text_12"
                    android:visibility="gone"
                    app:hintTextAppearance="@style/EditTextHintTextAppearance"
                    app:hintTextColor="?attr/primary"
                    app:layout_constraintEnd_toStartOf="@id/imageContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:textColor="?attr/textPrimary"
                        android:theme="@style/EditTextCursorColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageContainer"
                    android:layout_width="@dimen/size_32"
                    android:layout_height="@dimen/size_32"
                    android:layout_marginEnd="@dimen/margin_36"
                    android:backgroundTint="?attr/primary"
                    app:cardCornerRadius="@dimen/radius_full"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imagePhoneOrEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_phone" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_24"
                android:fontFamily="@font/roboto"
                android:hint="@string/password_text_ru"
                android:textColorHint="?attr/secondary"
                android:textSize="@dimen/text_12"
                app:endIconMode="password_toggle"
                app:hintTextAppearance="@style/EditTextHintTextAppearance"
                app:hintTextColor="?attr/primary"
                app:passwordToggleDrawable="@drawable/toggle_visible_password"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textColor="?attr/textPrimary"
                    android:theme="@style/EditTextCursorColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_32"
                android:backgroundTint="?attr/primary"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textSize="@dimen/text_14"
                app:cornerRadius="@dimen/radius_8"
                app:layout_constraintEnd_toEndOf="@id/passwordTextInput"
                app:layout_constraintStart_toStartOf="@+id/passwordTextInput"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextInput"
                app:layout_constraintWidth_percent="0.8" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/forgotTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_24"
            android:fontFamily="@font/roboto"
            android:text="@string/forgot_your_password"
            android:textColor="?attr/primary"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tutorImage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registrationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/primary"
            android:fontFamily="@font/roboto_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/register_text"
            android:textAllCaps="true"
            android:textSize="@dimen/text_14"
            app:cornerRadius="@dimen/radius_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>
